--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -18,12 +18,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Push changes
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git push https://${{ secrets.GH_PAT }}@github.com/Khleee/velog.git
-
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -35,3 +29,11 @@ jobs:
 
     - name: Run script
       run: python scripts/update_blog.py
+
+    - name: Push changes
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add .
+        git diff --quiet && git diff --staged --quiet || git commit -m "Update blog posts"
+        git push https://${{ secrets.GH_PAT }}@github.com/Khleee/velog.git
